tests/paczka1/small_fuzzy/99417761.err
Error in line 1: xHnR2 A277 5,t
Error in line 6: S798 S513 88,9
Error in line 5: XhUZ6j9U S513 76,7
Error in line 14: FvimtJ A916 71,4
